# Sustainable_Agriculture

./: .gitignore  README.md
sustainable-agri-recommender/: .gitignore  LICENSE  README.md  progress_report_week1.md  project_goal.md  pyproject.toml  requirements.txt
sustainable-agri-recommender/data/: README.md
sustainable-agri-recommender/experiments/: README.md
sustainable-agri-recommender/experiments/rf_baseline/: README.md
sustainable-agri-recommender/notebooks/: 02_model_training.ipynb  README.md
sustainable-agri-recommender/src/: __init__.py  api_fastapi.py  generate_synthetic_data.py  plot_feature_importance.py  recommender.py  train_model.py
sustainable-agri-recommender/tests/: __init__.py  test_basic.py  test_recommender.py
